--- a/charts/miggo-collector/values.yaml
+++ b/charts/miggo-collector/values.yaml
@@ -2,14 +2,14 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-namespace: default
+namespace: client
 
 imageCredentials:
   registry: https://index.docker.io/v1/
   username: "aradmiggo"
   password: "dckr_pat_PCWAlTO7TxCrQI63dQdwgqcbqOo"
 
-operatorServiceAccount: opentelemetry-operator
+operatorServiceAccount: {{ .Release.Name }}-collector
 
 ## aws fields for updater job.
 aws:
