--- a/charts/miggo-collector/templates/instrumentation.yaml
+++ b/charts/miggo-collector/templates/instrumentation.yaml
@@ -4,10 +4,11 @@ metadata:
   name: {{ .Release.Name }}-instrumentation
 spec:
   exporter:
-    endpoint: http://{{ .Release.Name }}-collector:4317
+    endpoint: http://{{ .Release.Name }}-collector.{{ .Values.collectorNameSpace}}:4317
 
   env:
     - name: OTEL_RESOURCE_ATTRIBUTES
-      value: {{ .Values.client_attr }}
+      value: {{ .Values.customerAttr}}
   sampler:
     type: parentbased_always_on
+
