--- a/charts/miggo-collector/templates/secret.yaml
+++ b/charts/miggo-collector/templates/secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  #name: {{ .Release.Name }}-dockerconfigjson
-  name: miggo-dockerconfigjson
+  name: {{ .Values.miggoCollectorSecret }}
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ printf "{\"auths\":{\"%s\":{\"username\":\"%s\",\"password\":\"%s\"}}}" .Values.imageCredentials.registry .Values.imageCredentials.username .Values.imageCredentials.password | b64enc | quote }}
+
