--- a/charts/miggo-collector/templates/service-role.yaml
+++ b/charts/miggo-collector/templates/service-role.yaml
@@ -5,7 +5,7 @@ metadata:
 rules:
   - apiGroups: ["opentelemetry.io"]
     resources: ["opentelemetrycollectors"]
-    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+    verbs: ["get", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
