--- a/charts/miggo-collector/templates/math-updater.yaml
+++ b/charts/miggo-collector/templates/math-updater.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.math.enabled }}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -38,4 +39,4 @@ spec:
           restartPolicy: Never
   successfulJobsHistoryLimit: 2 # Number of successful jobs to keep
   failedJobsHistoryLimit: 2 # Keep only one failed job
-
+  {{ end }}
