--- a/charts/miggo-collector/templates/math-deployment.yaml
+++ b/charts/miggo-collector/templates/math-deployment.yaml
@@ -15,11 +15,13 @@ spec:
     spec:
       containers:
         - name: math-container
+          imagePullPolicy: Always
           image: "{{ .Values.math.image.repository }}:{{ .Values.math.image.tag }}"
           volumeMounts:
             - name: config-volume
               mountPath: /usr/src/app/config.json
               subPath: config.json
+      serviceAccountName: opentelemetry-operator
       imagePullSecrets:
         - name: "{{ .Values.miggoCollectorSecret }}"
       volumes:
