--- a/charts/miggo-collector/values.yaml
+++ b/charts/miggo-collector/values.yaml
@@ -4,7 +4,7 @@ customerAttr: ""
 
 # If one collector deployed for diff namesapces, specify false, and collector namespace
 deployCollector: true
-collectorNameSpace: ""
+collectorNameSpace: "default"
 
 # Default secret name (const in miggo-operator)
 miggoCollectorSecret:  miggo-dockerconfigjson
