--- a/charts/miggo-collector/templates/math-deployment.yaml
+++ b/charts/miggo-collector/templates/math-deployment.yaml
@@ -21,7 +21,7 @@ spec:
             - name: config-volume
               mountPath: /usr/src/app/config.json
               subPath: config.json
-      serviceAccountName: opentelemetry-operator
+      serviceAccountName: miggo-operator
       imagePullSecrets:
         - name: "{{ .Values.miggoCollectorSecret }}"
       volumes:
