--- a/charts/miggo-collector/templates/updater.yaml
+++ b/charts/miggo-collector/templates/updater.yaml
@@ -15,6 +15,9 @@ spec:
           - name: {{ .Release.Name }}-updater-j
             image: {{ .Values.updater.image }}
             imagePullPolicy: Always
+            envFrom:
+              - secretRef:
+                  name: {{ .Values.updater.secretName }}
             env:
             - name: AWS_ACCESS_KEY_ID
               value: {{ .Values.aws.accessKeyId }}
