--- a/charts/miggo-collector/templates/updater.yaml
+++ b/charts/miggo-collector/templates/updater.yaml
@@ -15,6 +15,11 @@ spec:
           - name: {{ .Release.Name }}-updater-j
             image: {{ .Values.updater.image }}
             imagePullPolicy: Always
+            {{- if .Values.updater.secretName }}
+            envFrom:
+            - secretRef:
+                name: {{ .Values.updater.secretName }}
+            {{- else }}
             env:
             - name: AWS_ACCESS_KEY_ID
               value: {{ .Values.aws.accessKeyId }}
@@ -30,6 +35,7 @@ spec:
               value: {{ .Release.Name }}
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
+          {{- end }}
           imagePullSecrets:
           - name: {{ .Values.miggoCollectorSecret }}
           restartPolicy: Never
