--- a/charts/miggo-collector/values.yaml
+++ b/charts/miggo-collector/values.yaml
@@ -1,7 +1,3 @@
-# Tenant and Project id, format:
-# io.miggo.tenant.id=<id>,io.miggo.project.id=<id>
-customerAttr: ""
-
 # If one collector deployed for diff namesapces, specify false, and collector namespace
 deployCollector: true
 collectorNameSpace: ""
@@ -30,8 +26,9 @@ updater:
   secretName: ""
 
 math:
-  name: "miggo"
   enabled: false
+  name: "miggo"
+  serviceAccountName: "opentelemetry-operator"
   image:
     repository: "miggoprod/math"
     tag: latest
