--- a/charts/miggo-collector/templates/math-deployment.yaml
+++ b/charts/miggo-collector/templates/math-deployment.yaml
@@ -21,7 +21,7 @@ spec:
             - name: config-volume
               mountPath: /usr/src/app/config.json
               subPath: config.json
-      serviceAccountName: miggo-operator
+      serviceAccountName: {{ .Values.math.serviceAccountName }}
       imagePullSecrets:
         - name: "{{ .Values.miggoCollectorSecret }}"
       volumes:
