fix delayed resources

--- a/charts/miggo-operator/templates/deployment.yaml
+++ b/charts/miggo-operator/templates/deployment.yaml
@@ -28,6 +28,7 @@ spec:
         {{- include "opentelemetry-operator.podLabels" . | nindent 8 }}
         {{- end }}
         app.kubernetes.io/component: controller-manager
+        miggo.io/component: operator
     spec:
       hostNetwork: {{ .Values.hostNetwork }}
       {{- if .Values.priorityClassName }}
