--- a/charts/miggo-operator/templates/delayed-resources/creator-job.yaml
+++ b/charts/miggo-operator/templates/delayed-resources/creator-job.yaml
@@ -3,6 +3,7 @@ kind: Job
 metadata:
   name: delayed-resources-creator-job
 spec:
+  ttlSecondsAfterFinished: 1
   template:
     spec:
       serviceAccountName: delayed-resources-service-account
