allow specifying image secrets from existing secrets

--- a/charts/miggo-operator/templates/deployment.yaml
+++ b/charts/miggo-operator/templates/deployment.yaml
@@ -135,10 +135,7 @@ spec:
           securityContext: {{ toYaml . | nindent 12 }}
           {{- end }}
         {{- end }}
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+      {{- include "imagePullSecrets" . | nindent 6 }}
       {{- with .Values.affinity }}
       affinity: {{ toYaml . | nindent 8 }}
       {{- end }}
