--- a/charts/miggo-operator/templates/math-deployment.yaml
+++ b/charts/miggo-operator/templates/math-deployment.yaml
@@ -22,8 +22,7 @@ spec:
               mountPath: /usr/src/app/config.json
               subPath: config.json
       serviceAccountName: miggo-operator
-      imagePullSecrets:
-        - name: "{{ .Values.collector.miggoCollectorSecret }}"
+      {{- include "imagePullSecrets" . | nindent 6 }}
       volumes:
         - name: config-volume
           configMap:
