--- a/charts/miggo-operator/templates/updater/updater.yaml
+++ b/charts/miggo-operator/templates/updater/updater.yaml
@@ -44,8 +44,7 @@ spec:
                 kubectl create configmap "$MATH_NAME-config" --from-file=config.json=$MATH_FILE_NAME -n $NAMESPACE --dry-run=client -o yaml | kubectl apply -f -
                 kubectl rollout restart deployment/$MATH_NAME-math -n $NAMESPACE
               fi
-          imagePullSecrets:
-          - name: {{ .Values.collector.miggoCollectorSecret }}
+          {{- include "imagePullSecrets" . | nindent 10 }}
           restartPolicy: Never
   successfulJobsHistoryLimit: 0 # Number of successful jobs to keep
   failedJobsHistoryLimit: 0 # Keep only one failed job
