suppor image secrets for collector and agents

--- a/charts/miggo-operator/templates/deployment.yaml
+++ b/charts/miggo-operator/templates/deployment.yaml
@@ -47,6 +47,7 @@ spec:
             {{- if and .Values.manager.collectorImage.repository .Values.manager.collectorImage.tag }}
             - --collector-image={{ .Values.manager.collectorImage.repository }}:{{ .Values.manager.collectorImage.tag }}
             {{- end }}
+            - --image-pull-secret={{- include "imagePullSecretName" . }}
             {{- if and .Values.manager.targetAllocatorImage.repository .Values.manager.targetAllocatorImage.tag }}
             - --target-allocator-image={{ .Values.manager.targetAllocatorImage.repository }}:{{ .Values.manager.targetAllocatorImage.tag }}
             {{- end }}
