--- a/charts/miggo-operator/templates/delayed-resources/role.yaml
+++ b/charts/miggo-operator/templates/delayed-resources/role.yaml
@@ -11,4 +11,4 @@ rules:
   verbs: ["get"]
 - apiGroups: ["opentelemetry.io"]
   resources: ["opentelemetrycollectors", "instrumentations"]
-  verbs: ["get", "list", "create", "patch"]
+  verbs: ["get", "list", "create", "patch", "delete"]
