--- a/charts/miggo-operator/examples/default/rendered/clusterrole.yaml
+++ b/charts/miggo-operator/examples/default/rendered/clusterrole.yaml
@@ -4,11 +4,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    helm.sh/chart: opentelemetry-operator-0.41.0
+    helm.sh/chart: opentelemetry-operator-0.64.4
     app.kubernetes.io/name: opentelemetry-operator
-    app.kubernetes.io/version: "0.87.0"
+    app.kubernetes.io/version: "0.103.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/instance: example
+    
     app.kubernetes.io/component: controller-manager
   name: example-opentelemetry-operator-manager
 rules:
@@ -16,6 +17,11 @@ rules:
       - ""
     resources:
       - configmaps
+      - persistentvolumeclaims
+      - persistentvolumes
+      - pods
+      - serviceaccounts
+      - services
     verbs:
       - create
       - delete
@@ -39,64 +45,10 @@ rules:
       - list
       - watch
   - apiGroups:
-      - ""
-    resources:
-      - serviceaccounts
-    verbs:
-      - create
-      - delete
-      - get
-      - list
-      - patch
-      - update
-      - watch
-  - apiGroups:
-      - ""
-    resources:
-      - services
-    verbs:
-      - create
-      - delete
-      - get
-      - list
-      - patch
-      - update
-      - watch
-  - apiGroups:
       - apps
     resources:
       - daemonsets
-    verbs:
-      - create
-      - delete
-      - get
-      - list
-      - patch
-      - update
-      - watch
-  - apiGroups:
-      - apps
-    resources:
       - deployments
-    verbs:
-      - create
-      - delete
-      - get
-      - list
-      - patch
-      - update
-      - watch
-  - apiGroups:
-      - apps
-    resources:
-      - replicasets
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - apps
-    resources:
       - statefulsets
     verbs:
       - create
@@ -105,6 +57,15 @@ rules:
       - list
       - patch
       - update
+      - watch
+  - apiGroups:
+      - apps
+      - extensions
+    resources:
+      - replicasets
+    verbs:
+      - get
+      - list
       - watch
   - apiGroups:
       - autoscaling
@@ -119,6 +80,23 @@ rules:
       - update
       - watch
   - apiGroups:
+      - batch
+    resources:
+      - jobs
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - config.openshift.io
+    resources:
+      - infrastructures
+      - infrastructures/status
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
       - coordination.k8s.io
     resources:
       - leases
@@ -130,6 +108,7 @@ rules:
   - apiGroups:
       - monitoring.coreos.com
     resources:
+      - podmonitors
       - servicemonitors
     verbs:
       - create
@@ -164,6 +143,32 @@ rules:
   - apiGroups:
       - opentelemetry.io
     resources:
+      - opampbridges
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - opentelemetry.io
+    resources:
+      - opampbridges/finalizers
+    verbs:
+      - update
+  - apiGroups:
+      - opentelemetry.io
+    resources:
+      - opampbridges/status
+    verbs:
+      - get
+      - patch
+      - update
+  - apiGroups:
+      - opentelemetry.io
+    resources:
       - opentelemetrycollectors
     verbs:
       - get
@@ -188,30 +193,22 @@ rules:
       - patch
       - update
   - apiGroups:
-    - route.openshift.io
-    resources:
-    - routes
-    - routes/custom-host
-    verbs:
-    - create
-    - delete
-    - get
-    - list
-    - patch
-    - update
-    - watch
-  - apiGroups:
-    - discovery.k8s.io
-    resources:
-    - endpointslices
-    verbs:
-    - get
-    - list
-    - watch
-  - apiGroups:
       - policy
     resources:
       - poddisruptionbudgets
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - route.openshift.io
+    resources:
+      - routes
+      - routes/custom-host
     verbs:
       - create
       - delete
@@ -226,11 +223,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    helm.sh/chart: opentelemetry-operator-0.41.0
+    helm.sh/chart: opentelemetry-operator-0.64.4
     app.kubernetes.io/name: opentelemetry-operator
-    app.kubernetes.io/version: "0.87.0"
+    app.kubernetes.io/version: "0.103.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/instance: example
+    
     app.kubernetes.io/component: controller-manager
   name: example-opentelemetry-operator-metrics
 rules:
@@ -244,11 +242,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    helm.sh/chart: opentelemetry-operator-0.41.0
+    helm.sh/chart: opentelemetry-operator-0.64.4
     app.kubernetes.io/name: opentelemetry-operator
-    app.kubernetes.io/version: "0.87.0"
+    app.kubernetes.io/version: "0.103.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/instance: example
+    
     app.kubernetes.io/component: controller-manager
   name: example-opentelemetry-operator-proxy
 rules:
