--- a/charts/miggo-operator/templates/servicemonitor.yaml
+++ b/charts/miggo-operator/templates/servicemonitor.yaml
@@ -23,6 +23,14 @@ spec:
       app.kubernetes.io/component: controller-manager
   endpoints:
   {{- toYaml .Values.manager.serviceMonitor.metricsEndpoints | nindent 2 }}
+  {{- with .Values.manager.serviceMonitor.relabelings }}
+  relabelings:
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.manager.serviceMonitor.metricRelabelings }}
+  metricRelabelings:
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace }}
