--- a/charts/miggo-operator/templates/delayed-resources/configmap.yaml
+++ b/charts/miggo-operator/templates/delayed-resources/configmap.yaml
@@ -35,7 +35,7 @@ data:
     metadata:
       name: {{ .Release.Name }}
     spec:
-      mode: deployment # This configuration is omittable.
+      mode: deployment
       imagePullPolicy: Always
       config:
         receivers:
@@ -46,16 +46,15 @@ data:
               http:
                 endpoint: "0.0.0.0:4318"
         processors:
-          # Add any processors you need here.
+          batch: {}
 
         exporters:
           logging:
             loglevel: debug
-          # Add any other exporters you need here.
 
         service:
           pipelines:
             traces:
               receivers: [otlp]
-              processors: []
               exporters: [logging]
+              processors: [batch]
