--- a/charts/miggo-operator/conf/crds/crd-opentelemetry.io_opampbridges.yaml
+++ b/charts/miggo-operator/conf/crds/crd-opentelemetry.io_opampbridges.yaml
@@ -1,8 +1,9 @@
----
+{{- if .Values.crds.create }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
+    cert-manager.io/inject-ca-from: {{ include "opentelemetry-operator.webhookCertAnnotation" . }}
     controller-gen.kubebuilder.io/version: v0.14.0
   creationTimestamp: null
   labels:
@@ -1714,3 +1715,4 @@ status:
     plural: ""
   conditions: null
   storedVersions: null
+{{- end }}
