--- a/charts/miggo-operator/conf/crds/crd-opentelemetrycollector.yaml
+++ b/charts/miggo-operator/conf/crds/crd-opentelemetrycollector.yaml
@@ -1,14 +1,27 @@
----
+{{- if .Values.crds.create }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
+    cert-manager.io/inject-ca-from: {{ include "opentelemetry-operator.webhookCertAnnotation" . }}
     controller-gen.kubebuilder.io/version: v0.14.0
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: opentelemetry-operator
   name: opentelemetrycollectors.opentelemetry.io
 spec:
+  conversion:
+    strategy: Webhook
+    webhook:
+      clientConfig:
+        service:
+          name: {{ template "opentelemetry-operator.fullname" . }}-webhook
+          namespace: {{ .Release.Namespace }}
+          path: /convert
+{{ if .caBundle }}{{ cat "caBundle:" .caBundle | indent 8 }}{{ end }}
+      conversionReviewVersions:
+      - v1alpha1
+      - v1beta1
   group: opentelemetry.io
   names:
     kind: OpenTelemetryCollector
@@ -9124,3 +9137,4 @@ status:
     plural: ""
   conditions: null
   storedVersions: null
+{{- end }}
