--- a/charts/miggo-operator/Chart.yaml
+++ b/charts/miggo-operator/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: miggo-operator
-version: 0.1.5
+version: 0.64.4
 description: Miggo Operator Helm chart for Kubernetes
 type: application
-appVersion: 0.87.0
-
+home: https://opentelemetry.io/
+appVersion: 0.105.0
